fix(ai): 搜索工具并行改显式虚拟线程执行器，修正 commonPool 虚拟线程错误描述